--- a/wxcloudrun/templates/index副本.html
+++ b/wxcloudrun/templates/index副本.html
@@ -207,7 +207,7 @@
     <div class="title">
       <img class="title-logo"
         src="https://static-index-4gtuqm3bfa95c963-1304825656.tcloudbaseapp.com/official-website/favicon.svg" />
-      <div style="display: inline; margin-bottom: 48px" class="title-text">欢迎使用本页面</div>
+      <div style="display: inline; margin-bottom: 48px" class="title-text">欢迎使用微信云托管</div>
     </div>
     <div style="text-align: center; display: flex; flex-direction: column; align-items: center; margin: 0">
       <span class="count-text">
@@ -220,8 +220,8 @@
       <div class="card" style="width: 320px; margin-bottom: 48px;">
         <div class="card-body">
           <img class="qrcode middle"
-            src="https://p3.ssl.qhimgs1.com/sdr/400__/t01425a52e098e3e849.jpg" />
-          <small class="card-text" style="display: flex; justify-content: center; margin-top: 8px">这是一张测试图片</small>
+            src="https://qcloudimg.tencent-cloud.cn/raw/89b46988d3cd73d8a56e76a1b82bb377.png" />
+          <small class="card-text" style="display: flex; justify-content: center; margin-top: 8px">扫码加入微信云托管用户群</small>
         </div>
       </div>
       <div>
@@ -230,7 +230,7 @@
         </div>
         <div style="display: flex; justify-content: space-between; margin-top: 16px;">
           <a class="btn btn-light btn-lg link-button" style="border: 0; box-shadow: none; margin-right: 12px;"
-            href="https://kimi.moonshot.cn/chat/ctgho7d4335bd68inml0" target="_blank"
+            href="https://developers.weixin.qq.com/miniprogram/dev/wxcloudrun/src/basic/intro.html" target="_blank"
             rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
               height="24px" viewBox="0 0 24 24">
@@ -244,9 +244,9 @@
                 </g>
               </g>
             </svg>
-            <span style="margin-left: 4px">KIMI-AI无敌</span></a>
+            <span style="margin-left: 4px">开发者文档</span></a>
           <a class="btn btn-light btn-lg link-button" style="border: 0; box-shadow: none;"
-            href="https://kimi.moonshot.cn/chat/ctgho7d4335bd68inml0"
+            href="https://developers.weixin.qq.com/community/business/course/00068c2c0106c0667f5b01d015b80d"
             target="_blank" rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
               height="24px" viewBox="0 0 24 24">
